--- a/index.html
+++ b/index.html
@@ -691,36 +691,6 @@ document.getElementById('startBtn').addEventListener('click', ()=>{
 
 
 
-      // RESTART (fixed)
-      {
-        const scene = this;
-        document.getElementById('restartBtn').addEventListener('click', () => {
-          sfx.uiClick.play();
-          fadeIn(() => {
-            document.getElementById('game-over-screen').style.display = 'none';
-            // restart the scene in-place
-            scene.scene.restart();
-            // reset our globals
-            gameStarted = false;
-            gameOver = false;
-            gamePaused = false;
-            direction = 1;
-            angle = 0;
-            speed = 3;
-            score = 0;
-            fadeOut(() => {
-              // re-show canvas and HUD
-              gameStarted = true;
-              document.querySelector('canvas').style.visibility = 'visible';
-              scoreText.setText('Score: 0');
-              scoreText.setVisible(true);
-              pauseIcon.setVisible(true);
-              // re-start spawning
-              scheduleSpawn();
-            });
-          });
-        });
-      }
 
       document.getElementById('homeBtn').addEventListener('click', () => {
         fadeIn(() => window.location.href = window.location.href);
@@ -835,6 +805,14 @@ data.forEach((e, i) => {
         yoyo:true, duration:80, ease:'Sine.easeOut'
       });
     }
+    // RESTART (fixed) using working_restart.html logic
+    document.getElementById('restartBtn').addEventListener('click', () => {
+      sfx.uiClick?.play();
+      document.getElementById('game-over-screen').style.display = 'none';
+      document.querySelector('canvas').style.visibility = 'visible';
+      window.game.scene.keys.default.scene.restart();
+    });
+
   </script>
 <div id="fade-screen">
 </div>
