--- a/index.html
+++ b/index.html
@@ -685,57 +685,62 @@ document.getElementById('startBtn').addEventListener('click', ()=>{
 });
 
 
-      // RESTART: fully reset game state and restart
+      // RESTART
+
+
+
+
+
+      // RESTART (fixed)
       {
         const scene = this;
         document.getElementById('restartBtn').addEventListener('click', () => {
           sfx.uiClick.play();
           fadeIn(() => {
             document.getElementById('game-over-screen').style.display = 'none';
-            // reset state
+            // restart the scene in-place
+            scene.scene.restart();
+            // reset our globals
+            gameStarted = false;
             gameOver = false;
             gamePaused = false;
-            gameStarted = true;
             direction = 1;
             angle = 0;
             speed = 3;
             score = 0;
-            // clear existing objects
-            obstacles.clear(true, true);
-            points.clear(true, true);
-            // recreate orbiting circles
-            scene.circle1 = scene.add.image(0, 0, 'orb');
-            scene.physics.add.existing(scene.circle1);
-            scene.circle1.body.setCircle(22.5, 27.5, 27.5);
-            scene.circle2 = scene.add.image(0, 0, 'orb');
-            scene.physics.add.existing(scene.circle2);
-            scene.circle2.body.setCircle(22.5, 27.5, 27.5);
-            // recreate trail
-            const trail = scene.add.particles('orb');
-            [scene.circle1, scene.circle2].forEach(c => trail.createEmitter({
-              follow: c,
-              lifespan: 300, speed: 0,
-              scale: { start: 0.3, end: 0 },
-              alpha: { start: 0.4, end: 0 },
-              frequency: 50, blendMode: 'ADD'
-            }));
-            // rebind collisions
-            scene.physics.add.overlap(scene.circle1, obstacles, triggerGameOver, null, scene);
-            scene.physics.add.overlap(scene.circle2, obstacles, triggerGameOver, null, scene);
-            // show canvas and HUD
-            document.querySelector('canvas').style.visibility = 'visible';
-            scoreText.setText('Score: 0');
-            scoreText.setVisible(true);
-            pauseIcon.setVisible(true);
-            muteIcon.setVisible(true);
-            // resume physics
-            scene.physics.resume();
-            // restart object spawning
-            scheduleSpawn();
-            fadeOut();
+            fadeOut(() => {
+              // re-show canvas and HUD
+              gameStarted = true;
+              document.querySelector('canvas').style.visibility = 'visible';
+              scoreText.setText('Score: 0');
+              scoreText.setVisible(true);
+              pauseIcon.setVisible(true);
+              // re-start spawning
+              scheduleSpawn();
+            });
           });
         });
       }
+
+      document.getElementById('homeBtn').addEventListener('click', () => {
+        fadeIn(() => window.location.href = window.location.href);
+      });
+
+
+
+
+
+
+
+document.getElementById('homeBtn').addEventListener('click', () => {
+  fadeIn(() => {
+    window.location.href = window.location.href;
+  });
+});
+
+
+    }
+
     function update(){
       if(!gameStarted||gameOver||gamePaused) return;
       angle+=0.05*direction;
