--- a/index.html
+++ b/index.html
@@ -573,11 +573,35 @@
         });
       });
 
-      // RESTART: reload the page for a clean new session
+      // RESTART: reset in-place and resume play immediately
       document.getElementById('restartBtn').addEventListener('click', () => {
         sfx.uiClick.play();
         fadeIn(() => {
-          window.location.reload();
+          // hide Game Over overlay & leaderboard
+          document.getElementById('game-over-screen').style.display = 'none';
+          document.getElementById('leaderboard').style.display = 'none';
+
+          // reset core state
+          gameOver = false;
+          score = 0;
+          speed = 3;
+          direction = 1;
+          angle = 0;
+
+          // clear existing sprites/groups
+          obstacles.clear(true, true);
+          points.clear(true, true);
+
+          // reset HUD
+          scoreText.setText('Score: 0').setVisible(true);
+          pauseIcon.setVisible(true);
+          document.querySelector('canvas').style.visibility = 'visible';
+
+          // resume game
+          gameStarted = true;
+          scheduleSpawn();
+
+          fadeOut();
         });
       });
 
