--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 <button class="btn-primary" id="startBtn">
     TAP TO START
    </button>
-<button class="btn-primary" id="viewLeaderboardBtn">
+<button class="btn-secondary" id="viewLeaderboardBtn">
     VIEW LEADERBOARD
    </button>
 <div class="orbit">
